removed css that hid scrollbar because it was causing issues

--- a/src/components/calendar/calendarHeader/CalendarHeader.css
+++ b/src/components/calendar/calendarHeader/CalendarHeader.css
@@ -23,9 +23,9 @@
   padding-right: var(--scrollBarWidth);
 }
 
-.calendarHeaderContent::-webkit-scrollbar {
+/* .calendarHeaderContent::-webkit-scrollbar {
   display:none;
-}
+} */
 
 .hourMarkers {
   position: absolute;
