--- a/src/components/calendar/calendarSidebar/CalendarSidebar.css
+++ b/src/components/calendar/calendarSidebar/CalendarSidebar.css
@@ -57,9 +57,9 @@
   overflow-x: hidden;
 }
 
-.calendarSidebarItems::-webkit-scrollbar {
+/* .calendarSidebarItems::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .calendarSidebarItem {
   color: white;
